{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 4,
  "lineage": "639e7945-e793-1036-fea5-e7af305c3812",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066b52df6fd3bc721",
            "arn": "arn:aws:ec2:us-east-1:919952350503:elastic-ip/eipalloc-066b52df6fd3bc721",
            "domain": "vpc",
            "id": "eipalloc-066b52df6fd3bc721",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-228-207-202.compute-1.amazonaws.com",
            "public_ip": "34.228.207.202",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919952350503:security-group/sg-0e37a601b3d212573",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0e37a601b3d212573",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "919952350503",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-012dc8bae5f485351"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919952350503",
            "id": "sg-0e37a601b3d212573",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919952350503:security-group-rule/sgr-09e1f76d1730ec879",
            "cidr_ipv4": "34.228.207.202/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-09e1f76d1730ec879",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e37a601b3d212573",
            "security_group_rule_id": "sgr-09e1f76d1730ec879",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919952350503",
            "id": "sgr-09e1f76d1730ec879",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}